// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display all 1`] = `
<div
  className="requirements"
>
  Requires 
  <span>
    level
  </span>
   
  <span
    className="value default"
  >
    5
  </span>
  , 
  <span
    className="value augmented"
  >
    500
  </span>
   
  <span>
    str
  </span>
  , 
  <span
    className="value default"
  >
    10
  </span>
   
  <span>
    dex
  </span>
  , 
  <span
    className="value default"
  >
    1
  </span>
   
  <span>
    int
  </span>
</div>
`;

exports[`should display once 1`] = `
<div
  className="requirements"
>
  Requires 
  <span>
    level
  </span>
   
  <span
    className="value default"
  >
    5
  </span>
</div>
`;
